clusters/jellybuntu/ops/matrix/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
  labels:
    app.kubernetes.io/part-of: jellybuntu
