clusters/jellybuntu/ops/matrix/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse
  namespace: matrix
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.elysium.industries`)
      kind: Rule
      services:
        - name: synapse
          port: 8008
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-admin
  namespace: matrix
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`synapse-admin.elysium.industries`)
      kind: Rule
      middlewares:
        - name: admin-ipallowlist
      services:
        - name: synapse-admin
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lk-jwt
  namespace: matrix
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lk-jwt.elysium.industries`)
      kind: Rule
      services:
        - name: lk-jwt
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: livekit
  namespace: matrix
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`livekit.elysium.industries`)
      kind: Rule
      services:
        - name: livekit
          port: 7880
